[gd_scene load_steps=67 format=3 uid="uid://cbbfxf83lknfq"]

[ext_resource type="Script" path="res://scripts/character/character.gd" id="1_je61o"]
[ext_resource type="Texture2D" uid="uid://dajq780bxf8av" path="res://sprites/characters/Knight_player/Idle_KG_2.png" id="1_okya6"]
[ext_resource type="Texture2D" uid="uid://byjj4pc1k0gk5" path="res://sprites/characters/Knight_player/Attack_KG_1.png" id="1_wgnkk"]
[ext_resource type="Texture2D" uid="uid://df7afclqmk6tu" path="res://sprites/characters/Knight_player/Walking_KG_2.png" id="2_liv6n"]
[ext_resource type="Texture2D" uid="uid://btij75llutumy" path="res://sprites/characters/Knight_player/Attack_KG_2.png" id="3_4ve8t"]
[ext_resource type="Texture2D" uid="uid://cw7kxwou0xh83" path="res://sprites/characters/Knight_player/Shield_Up_KG_1.png" id="3_o32m5"]
[ext_resource type="Texture2D" uid="uid://55no5d7a6fl5" path="res://sprites/characters/Knight_player/Landing_KG_2.png" id="6_bvqnp"]
[ext_resource type="Texture2D" uid="uid://c314iueirxsvv" path="res://sprites/characters/Knight_player/Hurt_KG_2.png" id="7_0bih1"]
[ext_resource type="AudioStream" uid="uid://c3seaau4f0sdo" path="res://audio/hit1.wav" id="9_b2t3y"]
[ext_resource type="AudioStream" uid="uid://d3ewpmd067n2e" path="res://audio/swing1.wav" id="10_prmwa"]
[ext_resource type="AudioStream" uid="uid://h5bj5a04vj5d" path="res://audio/block1.wav" id="11_0e7jf"]
[ext_resource type="AudioStream" uid="uid://dlw2cg3qghboe" path="res://audio/hit2.wav" id="12_25yp3"]
[ext_resource type="Script" path="res://scripts/fsm/state_machine.gd" id="13_d6fpl"]
[ext_resource type="Script" path="res://scripts/player/player_character_state_jump.gd" id="19_25cfr"]
[ext_resource type="Script" path="res://scripts/character/character_state_stun.gd" id="19_402f5"]
[ext_resource type="Script" path="res://scripts/player/player_character_state_attack.gd" id="19_bhaig"]
[ext_resource type="Script" path="res://scripts/player/player_character_state_idle.gd" id="19_cj0wi"]
[ext_resource type="Script" path="res://scripts/player/player_character_state_block.gd" id="19_gh0ei"]
[ext_resource type="Script" path="res://scripts/player/player_character_state_walk.gd" id="19_hct0t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_37uav"]
atlas = ExtResource("1_wgnkk")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07fh2"]
atlas = ExtResource("1_wgnkk")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhfjt"]
atlas = ExtResource("1_wgnkk")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61510"]
atlas = ExtResource("1_wgnkk")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25yff"]
atlas = ExtResource("1_wgnkk")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2l2f"]
atlas = ExtResource("1_wgnkk")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pnbn"]
atlas = ExtResource("3_4ve8t")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0475e"]
atlas = ExtResource("3_4ve8t")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs377"]
atlas = ExtResource("3_4ve8t")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujy58"]
atlas = ExtResource("3_4ve8t")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uhbu"]
atlas = ExtResource("3_4ve8t")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dikod"]
atlas = ExtResource("3_4ve8t")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyjvk"]
atlas = ExtResource("3_o32m5")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qbfe"]
atlas = ExtResource("3_o32m5")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtryd"]
atlas = ExtResource("3_o32m5")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sovp"]
atlas = ExtResource("3_o32m5")
region = Rect2(600, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx0rl"]
atlas = ExtResource("6_bvqnp")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nl2o"]
atlas = ExtResource("6_bvqnp")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crysx"]
atlas = ExtResource("6_bvqnp")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xak07"]
atlas = ExtResource("6_bvqnp")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn7tg"]
atlas = ExtResource("6_bvqnp")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywknq"]
atlas = ExtResource("6_bvqnp")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_so5fn"]
atlas = ExtResource("6_bvqnp")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsge5"]
atlas = ExtResource("6_bvqnp")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uphr"]
atlas = ExtResource("1_okya6")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l3yf"]
atlas = ExtResource("1_okya6")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k7tg"]
atlas = ExtResource("1_okya6")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6wbj"]
atlas = ExtResource("1_okya6")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g55yb"]
atlas = ExtResource("6_bvqnp")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti5a1"]
atlas = ExtResource("6_bvqnp")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k31eh"]
atlas = ExtResource("6_bvqnp")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2s1y"]
atlas = ExtResource("6_bvqnp")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ck4g"]
atlas = ExtResource("7_0bih1")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lupew"]
atlas = ExtResource("7_0bih1")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87w67"]
atlas = ExtResource("7_0bih1")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaqw4"]
atlas = ExtResource("7_0bih1")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsj1a"]
atlas = ExtResource("2_liv6n")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o86oi"]
atlas = ExtResource("2_liv6n")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvvyc"]
atlas = ExtResource("2_liv6n")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nln17"]
atlas = ExtResource("2_liv6n")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eulkr"]
atlas = ExtResource("2_liv6n")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0o4d"]
atlas = ExtResource("2_liv6n")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7bve"]
atlas = ExtResource("2_liv6n")
region = Rect2(600, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jhcdv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37uav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07fh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhfjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61510")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25yff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2l2f")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pnbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0475e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs377")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujy58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uhbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dikod")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyjvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qbfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtryd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sovp")
}],
"loop": true,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx0rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nl2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crysx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xak07")
}],
"loop": false,
"name": &"flip_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywknq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so5fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsge5")
}],
"loop": false,
"name": &"flip_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uphr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l3yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6wbj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g55yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti5a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k31eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2s1y")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ck4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lupew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87w67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaqw4")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsj1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o86oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvvyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nln17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eulkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0o4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7bve")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hch7y"]
size = Vector2(28, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4y4m"]
size = Vector2(28, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xotkn"]
size = Vector2(41, 34.5)

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_je61o")
attack_data_file = "res://config/characters_frame_data/knight.json"

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_jhcdv")
animation = &"attack2"
autoplay = "idle"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_hch7y")

[node name="hurtbox" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_j4y4m")

[node name="hitboxes" type="Area2D" parent="."]

[node name="slash_hitbox1" type="CollisionShape2D" parent="hitboxes"]
position = Vector2(36, -27.25)
shape = SubResource("RectangleShape2D_xotkn")

[node name="slash_hitbox2" type="CollisionShape2D" parent="hitboxes"]
position = Vector2(29.5, -46)
shape = SubResource("RectangleShape2D_xotkn")

[node name="sound" type="Node" parent="."]

[node name="hit1" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("9_b2t3y")

[node name="swing" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("10_prmwa")

[node name="block" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("11_0e7jf")

[node name="hit2" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("12_25yp3")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("13_d6fpl")
starting_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("19_bhaig")

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource("19_gh0ei")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("19_cj0wi")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("19_25cfr")

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("19_402f5")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("19_hct0t")

[node name="StateLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -99.0
offset_right = 21.0
offset_bottom = -76.0
horizontal_alignment = 1
